Add unit tests for job management, key-value store, retrieval cache, and streaming functionality
- Implement comprehensive unit tests for JobManager in `test_stage7_jobs.py` to validate job submission, state transitions, error handling, and persistence.
- Create unit tests for KVStore in `test_stage7_kvstore.py` to ensure thread-safe operations, persistence, and handling of edge cases.
- Develop tests for retrieval cache in `test_stage7_retrieval_cache.py` to verify cache key consistency, search hits/misses, and handling of various input scenarios.
- Add unit tests for generator streaming in `test_stream_generator.py` to confirm correct token streaming, response handling, and comparison with non-streaming outputs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ sentence-transformers = "2.7.0"
 structlog = "^24.1.0"
 orjson = "^3.10.7"
 pyarrow = "^17.0.0"  # for parquet support
+sse-starlette = "^3.0.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
@@ -51,6 +52,7 @@ mypy = "^1.11.2"
 pre-commit = "^3.8.0"
 
 # ---------- scripts ----------
+pytest-asyncio = "^1.2.0"
 [tool.poetry.scripts]
 dev-api = "rag_papers.api.main:run"
 rag-eval = "scripts.rag_eval:main"
